--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -19,7 +19,9 @@ jobs:
         python-version: '3.x'
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+        pip install setuptools wheel
+        pip install -r requirements.txt
 
     - name: Get current version
       id: get_version
@@ -46,4 +48,3 @@ jobs:
         git config user.email "actions@github.com"
         git tag -a v${{ env.VERSION }} -m "Release version ${{ env.VERSION }}"
         git push origin v${{ env.VERSION }}
-
