--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,12 +1,16 @@
-name: Publish Python Package
+name: Build and Test Python Package
 
 on:
+  pull_request:
+    branches:
+      - '**'  # Triggers on all branches with open PRs
+
   push:
     branches:
-      - master
+      - master  # Triggers on pushes to the main branch
 
 jobs:
-  build-and-publish:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,6 +37,34 @@ jobs:
       run: |
         python setup.py sdist bdist_wheel
 
+    # - name: Run tests
+    #   run: |
+    #     pip install pytest
+    #     pytest
+
+  publish-and-tag:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: build-and-test
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Install dependencies
+      run: |
+        pip install setuptools wheel
+        pip install -r requirements.txt
+
+    - name: Build the package
+      run: |
+        python setup.py sdist bdist_wheel
+
     - name: Publish to PyPI
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
@@ -42,7 +74,6 @@ jobs:
         twine upload dist/*
 
     - name: Create Git tag
-      if: success()
       run: |
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
