--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -24,13 +24,12 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install setuptools wheel
         pip install -r requirements.txt
 
     - name: Get current version
       id: get_version
       run: |
-        VERSION=$(python -c "exec(open('setup.py').read()); print(__version__)")
+        VERSION=$(python -c "from version import __version__; print(__version__)")
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Build the package
