--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -24,6 +24,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        pip install setuptools wheel
         pip install -r requirements.txt
 
     - name: Get current version
